apps/pragttle/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pragttle
  labels:
    name: pragttle
