apps/pragttle/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pragttle-backend
  namespace: pragttle
  labels:
    app: pragttle-backend
spec:
  selector:
    app: pragttle-backend
  ports:
  - name: http
    protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
