apps/pragttle/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pragttle-frontend
  namespace: pragttle
  labels:
    app: pragttle-frontend
spec:
  selector:
    app: pragttle-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
